# thermopack

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-MIT  Makefile  Makefile.code  Makefile_arm64  Makefile_arm64.code  Makefile_x86.code  README.md  libthermopack_export.symbols  libthermopack_export.version  thermopack-config.cmake
.github/: issue_template.md  prerelease_bodyFile.md
addon/cppExamples/: CMakeLists.txt  CMakeLists_static.txt  basic.cpp  flashes.cpp  saturation.cpp  tp_properties.cpp  tv_properties.cpp  tvp_properties.cpp
addon/cppThermopack/test_cpp/: CMakeLists.txt  main.cpp
addon/pycThermopack/: .gitignore  CMakeLists.txt  Makefile  README.md  README_pypi.md  build_whl.sh  build_whl_linux_x86.sh  build_whl_macOS_arm64.sh  build_whl_macOS_x86.sh  build_whl_windows_amd64.bat  build_whl_windows_win32.bat  debug_compile.sh  example.py  install  makescript.py  map_platform_specifics.py  pyproject.toml  pyproject_template.toml  setup.cfg  setup.py  thermopack_gui.py
addon/pycThermopack/gui/: about.html  main.py  stylesheet.qss  utils.py
addon/pycThermopack/gui/layouts/: bin_pxy_options.ui  component_info.ui  global_binary_options.ui  hv2_bin_coeff_widget.ui  main_layout.ui  model_select_widget.ui  ph_env_options.ui  plot_mode.ui  pressure_density_options.ui
addon/pycThermopack/gui/widgets/: about_window.py  calc_mode.py  change_mode.py  component_info.py  component_select_widget.py  model_select_widget.py  mpl_canvas.py  parameters.py  plot_mode.py  plot_mode_options.py  units_dialog.py
addon/pycThermopack/pyctp/: .gitignore  __init__.py  cpa.py  cubic.py  extended_csp.py  generate_platform_specifics.py  gui_main.py  gui_utils.py  lee_kesler.py  ljs_bh.py  ljs_wca.py  map_platform_specifics.py  multiparameter.py  pcsaft.py  pets.py  platform_specifics.py  plotutils.py  quantum_cubic.py  saft.py  saftvrmie.py  saftvrqmie.py  tcPR.py  thermo.py  thermopack_state.py  utils.py
addon/pycThermopack/pyctp/gui/: main.py  main_layout.ui  stylesheet.css  stylesheet.qss  stylesheet.txt  utils.py
addon/pycThermopack/pyctp/gui/classes/: component.py
addon/pycThermopack/pyctp/gui/widgets/: calc_mode.py  component_info.py  component_select_widget.py  go_to_plot_mode_popup.py  mixing_rules.py  model_select_widget.py  mpl_canvas.py  parameters.py  plot_mode.py  plot_mode_options.py  units_dialog.py
addon/pycThermopack/pyctp/gui/widgets/layouts/: bin_pxy_options.ui  calc_mode.ui  component_select_widget.ui  global_binary_options.ui  go_to_plot_mode_popup.ui  hv1_bin_coeff_widget.ui  hv2_bin_coeff_widget.ui  model_select_widget.ui  ph_env_options.ui  plot_mode.ui  pressure_density_options.ui  units.ui  vdw_bin_coeff_widget.ui
addon/pycThermopack/pyctp/layouts/: go_to_plot_mode_popup.ui  units.ui
addon/pycThermopack/pyctp/widgets/: calc_mode.py  change_mode.py  component_info.py  component_select_widget.py  model_select_widget.py  mpl_canvas.py  parameters.py  plot_mode.py  plot_mode_options.py  units_dialog.py
addon/pycThermopack/scripts/: build_whl_macOS_arm64.sh  build_whl_macOS_x86.sh
addon/pycThermopack/tests/: test_envelopes.py  test_polar.py
addon/pycThermopack/thermopack/: __init__.py  cpa.py  cubic.py  extended_csp.py  hydrate.py  ideal.py  lee_kesler.py  ljs_bh.py  ljs_wca.py  multiparameter.py  pcsaft.py  pets.py  plotutils.py  quantum_cubic.py  saft.py  saftvrmie.py  saftvrqmie.py  tcPR.py  thermo.py  thermopack_state.py  utils.py  uv_theory.py  volume_translation.py
addon/pycThermopack/wheelhouse/: thermopack-2.2.0-py3-none-manylinux_2_28_x86_64.whl  thermopack-2.2.0-py3-none-win32.whl  thermopack-2.2.0-py3-none-win_amd64.whl  thermopack-2.2.1-py3-none-manylinux_2_28_x86_64.whl  thermopack-2.2.1-py3-none-win32.whl  thermopack-2.2.1-py3-none-win_amd64.whl  thermopack-2.2.2-py3-none-win_amd64.whl  thermopack-2.2.3-py3-none-manylinux_2_28_x86_64.whl  thermopack-2.2.3-py3-none-win32.whl  thermopack-2.2.3-py3-none-win_amd64.whl
addon/pycThermopack/wheelhouse/fixed_wheels/: thermopack-2.0.0-py3-none-macosx_10_9_x86_64.whl  thermopack-2.0.0-py3-none-macosx_11_0_arm64.whl
doc/: Doxyfile  (+2 more)
prototype/: .gitignore  CMakeLists.txt  FortWrapOptions.txt  README.md  build.sh  main.cpp  main.f90  pytest.py  rebuild_and_run.sh  rebuild_fortran_prog.sh
prototype/cpp_test/: CMakeLists.txt  main.cpp
prototype/cpp_wrapper/: BaseEos.cpp  BaseEos.h  CMakeLists.txt  FortWrap.h  FortranISOWrappers.f90  InterfaceDefs.h  NotIdGas.cpp  NotIdGas.h  Variant1.cpp  Variant1.h  Variant2.cpp  Variant2.h  VariantEoS.cpp  VariantEoS.h  pybind11_bindings.cpp
prototype/fluids/: demo_db_handler.py  fluid_db_handler.py  speciesA.json  speciesB.json
prototype/fortran_test/: CMakeLists.txt  main.f90
prototype/py_wrapper/: BaseEoS.py
prototype/src/: CMakeLists.txt  base_eos.f90  compdata.f90  compdatadb.f90  compdatautils.f90  constants.f90  notidgas.f90  variants.f90
src/: CMakeLists.txt  apparent_composition.f90  association_var.f90  assocschemeutils.f90  binaryplot.f90  cbAlpha.f90  cbalpha.f90  cbbeta.f90  cbhelm.f90  cbmix.f90  cbselect.f90  co2Gibbs.f90  co2_gibbs.f90  compdata.f90  compdata_init.f90  compdatadb.f90  complexmodelinit.f90  consistency.f90  cpa_parameters.f90  critical.f90  cubic.f90  cubic_eos.f90  dltrend.cpp  dltrend.f90  dltrend_dummy.f90  eos.f90  eosTV.f90  eos_container.f90  eos_parameters.f90  eosdata.f90  eosdatadb.f90  eoslibinit.f90  eostv.f90  error.f90  excess_gibbs.f90  extcsp.f90  external.f90  fmt.f90  gerg.f90  gergdatadb.f90  (+108 more)
unittests/: CMakeLists.txt  Makefile  README.md  testSuites.inc  test_active_model.pf  test_critical.pf  test_dft.pf  test_eos.pf  test_eos_consistency.pf  test_eostv.pf  test_flash_pure.pf  test_flash_tpgrid.pf  test_hyperdual.pf  test_mbwr.pf  test_meos.pf  test_openmp.pf  test_pair_potentials.pf  test_parameters.pf  test_pc_saft.pf  test_pets.pf  test_ps_flash.pf  test_pseudo.pf  test_quantumcubic.pf  test_saft.pf  test_saftvrmie.pf  test_saturation.pf  test_state_func.pf  test_tp_flash.pf  test_trend.pf  test_uv_flash.pf  test_uv_sutherlandsum.pf  test_uv_theory.pf
(+499 files in other folders)
