cmake_minimum_required(VERSION 3.12)
cmake_policy(SET CMP0127 NEW)
cmake_policy(SET CMP0048 NEW)

project(DemoPack LANGUAGES Fortran CXX)

if(APPLE)
  set(PYBIND11_ROOT_DIR /usr/local/include/pybind11)
  set(CMAKE_CXX_STANDARD 17)
  set(CXX "/opt/homebrew/bin/g++-13")
  set(CMAKE_FORTRAN_COMPILER /opt/homebrew/bin/gfortran)
  # enable_language(CXX)
  # set(CMAKE_CXX_COMPILER /opt/homebrew/bin/g++-13)
  set(CMAKE_OSX_ARCHITECTURES "arm64" CACHE STRING "The OSX architecture")
  set(CMAKE_CXX_FLAGS "-fPIC -std=c++17 -arch arm64 -Wfatal-errors -Wno-unused-command-line-argument -Wl,-no_compact_unwind")
else()
  set(PYBIND11_ROOT_DIR ${PROJECT_SOURCE_DIR}/pybind11)
  set(CMAKE_FORTRAN_COMPILER gfortran)
  set(CMAKE_CXX_FLAGS "-fPIC -std=c++17 -Wfatal-errors")
  set(CMAKE_Fortran_FLAGS "-fPIC")
endif(APPLE)

add_subdirectory(./src fortran_lib)
add_subdirectory(${PYBIND11_ROOT_DIR} pybind11)
add_subdirectory(./cpp_wrapper cpp_wrapper)
add_subdirectory(./fortran_test fortran_test)
add_subdirectory(./cpp_test cpp_test)
file(COPY py_wrapper DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
file(COPY pytest.py DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
