file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.f90)
list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/thermopack.f90)
set(TREND_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../addon/trend_interface/include)
set(TREND ${TREND_DIR}/trend_interface.f95)

if(NOT MSVC)
    find_package(LAPACK REQUIRED)
endif()

# Define the executable in terms of the source files
add_library(libthermopack STATIC ${SOURCES})
if(MSVC)
    add_library(thermopack SHARED ${SOURCES})
    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} /libs:static /threads")
    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DEF:${CMAKE_SOURCE_DIR}/MSVStudio/thermopack.def")
else(MSVC)
    if(APPLE)
        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -exported_symbols_list ${CMAKE_SOURCE_DIR}/libthermopack_export.symbols")
    else(APPLE)
        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--version-script=${CMAKE_SOURCE_DIR}/libthermopack_export.version")
    endif(APPLE)
    add_library(thermopack SHARED $<TARGET_OBJECTS:libthermopack>)
endif(MSVC)

set_target_properties(libthermopack PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
target_include_directories(libthermopack PUBLIC ${TREND_DIR})
set_target_properties(thermopack PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
target_include_directories(thermopack PUBLIC ${TREND_DIR})

install(TARGETS thermopack DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../addon/pycThermopack/thermopack)
install(TARGETS thermopack DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../addon/cppThermopack)

add_executable(run_thermopack ${CMAKE_CURRENT_SOURCE_DIR}/thermopack.f90)
target_include_directories(run_thermopack PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

if(NOT MSVC)
    target_link_libraries(thermopack ${LAPACK_LIBRARIES})
    target_link_libraries(run_thermopack libthermopack ${LAPACK_LIBRARIES})
else()
    target_link_libraries(thermopack PRIVATE lapack blas)
    target_link_libraries(run_thermopack libthermopack lapack blas)
endif()
