[metadata]
name = pyctp
version = 1.0.0
author = Morten Hammer
author_email = hammer.morten@sintef.no
description = pycThermopack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SINTEF/thermopack
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Fortran
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
python_requires = >=3.6

[package_data]
pyctp = libthermopack.*
